# mini-project-cpp

./: .clang-format  .gitignore  CMakeLists.txt  readme.md
src/: main.cpp
